--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -2,7 +2,7 @@ name: Build and test
 
 on:
   push:
-    branches: [ main, rewrite ]
+    branches: [ main, rewrite, llvm-ubuntu ]
     paths-ignore:
       - "Docs/**"
       - "**.md"
